# homeDump

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  cli.py  config.py  database.py  dependencies.py  main.py  public_url.py
app/routers/: admin.py  dev.py  student.py
app/services/: assignments.py  attendance_parser.py  claim_logs.py  claims.py  data_backup.py  eligibility.py  print_queue.py  student_lookup.py
scripts/: backup_data.py  build_test_fixture.py  restore_data.py
static/: style.css
templates/: base.html  index.html  verify.html
templates/admin/: _nav.html  assignment_new.html  assignments_list.html  attendance.html  claim_logs.html  dashboard.html  login.html  print_queue.html
templates/student/: _assignments_list.html  _claim_error.html  _claim_result.html  _confirm_result.html  _date_select.html  _lookup_failure.html  _name_select.html  _placeholder.html  _sis_field.html
tests/: conftest.py  test_assignments.py  test_attendance_ingest.py  test_claim_logs.py  test_claims.py  test_config.py  test_data_backup.py  test_eligibility.py  test_print_queue.py  test_public_url.py  test_student_lookup.py
