[project]
name = "homedump"
version = "0.1.0"
description = "Classroom homework makeup tool for absent students"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "pandas",
    "openpyxl",
    "pypdf",
    "qrcode[pil]",
    "python-dotenv",
]

[project.scripts]
main = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]